# microgolf

./: .gitignore  .gitmodules  .luarc.json  imgui.ini  meson.build
assets/: TestBall.glb  TestClouds.xcf  TestGrass.xcf  TestHazard.xcf  TestRock.xcf  TestWood.xcf  concept.xcf
bad_ideas/: imgui_lua.cpp  imgui_lua.hpp  note  sample_lua_loader.lua
src/: imgui_impl_raylib.h  main.cpp  rlImGui.cpp  sample_main.cpp
src/gamescripts/sample_lua/: loop.lua  preload.lua
src/gui/: common.cpp  common.hpp  imgui_lua.cpp  imgui_lua.hpp  style.hpp
src/luahelper/: luahelper.cpp  luahelper.hpp
src/putrid/: putrid.cpp  putrid.hpp
src/putrid/gui/: common.cpp  common.hpp  mapeditor.hpp
src/putrid/luahelper/: luahelper.cpp  luahelper.hpp
src/putrid/mapeditor/: mapeditor.cpp  mapeditor.hpp
src/putrid/world/: world.cpp  world.hpp
src/samples/: sample_lua.cpp  sample_stinky_client.cpp  sample_stinky_server.cpp
src/stinky/: packettypes.hpp  stinky.cpp  stinky.hpp
src/tests/: sample_imgui.cpp  sample_lua.cpp  sample_raylib_render.cpp  sample_stinky_basic.cpp  sample_stinky_client.cpp  sample_stinky_server.cpp
